== Changelog
* 2020-08-03
** allow OpenAPI 3.0 (<<api-specs>>)
** remove unmaintained swagger-validator-maven-plugin and styleguide-validationrules from tools list (<<openapi-tools>>)
** change status codes to string types in example OpenAPI definitions to be compliant to the OpenAPI standard
** set license of this guide to Apache License, Version 2.0 (<<license,Introduction>>)
* 2020-03-24
** add links to GitHub, vocabularies and OAS schemas in the <<Introduction>>
* 2020-01-10
** updated rules: naming of <<JSON properties>> and naming of <<JSON data types>>: no digits as first letter and no dots in names
** added <<http-413,413 Payload Too Large>> to list of HTTP status codes
** updated <<Resource URI>> notation rule: no trailing slashes in URIs
** added rule: <<default values>> in OpenAPI specification
** added <<Controller>> resource archetype and move all archetypes to <<Resources>> chapter
* 2019-05-23
** update list of standard problem types and add InvalidParamProblem schema to problem-v1.yaml, see <<Standardized problem types>>
** new rule: naming of identifiers in <<Document>>
** add status code `303 See Other` to <<create-resource, Create a new resource >>
** new rule: use tags in <<openapi,OpenAPI>>
** new section: how to specify <<media-types-openapi, media types in OpenAPI>>
** update rules: naming of <<JSON properties>> and naming of <<JSON data types>> to make names more meaningful
** new rule: use `description` and avoid `title` to describe <<JSON data types>>
** updated rule: String and integer types (<<JSON data types>>). String based codes should have a unique representation.
* 2019-01-22
** modified <<API specifications>> guidelines for reusable definitions to be put in Swagger files instead of multiple smaller JSON schema files
** gCloud JSON Schemas refactored to this new file structure
** updated list of Swagger editors and code generators in <<Tools>>
** added guidelines about <<Tracing>> with standardized HTTP headers