@@ -318,7 +318,7 @@ The `PATCH` message MUST be conform to the JSON Merge Patch (https://tools.ietf.
 * properties not present in the request are preserved
 
 APIs should support both the MIME type of JSON merge patch `application/merge-patch+json` as the generic `application/json` JSON mime type.
-As JSON Merge Patch requests can not be fully specified as an OpenAPI data type, a MergePatch marker type should be used, defined in link:schemas/common/v1/common-v1.yaml[common-v1.yaml].
+As JSON Merge Patch requests can not be fully specified as an OpenAPI data type, a MergePatch marker type should be used, defined in https://github.com/belgif/openapi-common/blob/master/src/main/swagger-2.0/common/v1/common-v1.yaml[common-v1.yaml].
 
 .JSON merge patch
 ====
@@ -329,7 +329,7 @@ PATCH {API}/employers/93017373[^] HTTP/1.1
 
 [cols="1,2,3"]
 |===
-|​​​​​​​​​<<patch>>
+|<<patch>>
 |/employers/{employerId}
 |Performs a partial update of an existing employer.
 
@@ -346,7 +346,7 @@ a|
 }
 ----
 
-3+|​​​Parameters
+3+|Parameters
 
 |`employerId`|path-param|CBE enterprise number uniquely identifying the employer.
 
@@ -365,11 +365,11 @@ a|
 ----
 
 3+|Response codes
-​​|<<http-200,200>>
+|<<http-200,200>>
 |OK
 |Success code with resource after applying PATCH returned
 
-​​|<<http-204,204>>
+|<<http-204,204>>
 |No Content
 |Success code without returning the resource
 
@@ -380,11 +380,11 @@ a|
 |<<http-404,404>>
 |Not Found
 |The resource does not exist and thus cannot be updated.
-​
+
 |<<http-409,409>>
 |Conflict
 |The client data is in conflict with the data on the server e.g. optimistic locking issues.
-​
+
 |===
 ====
 
@@ -401,11 +401,11 @@ DELETE {API}/employers/93017373[^] HTTP/1.1
 
 [cols="1,2,3"]
 |===
-|​​​​​​​​​<<delete>>
+|<<delete>>
 |/employers/{employerId}
 |Deletes an employer.
 
-3+|​​​Parameters
+3+|Parameters
 
 |`employerId`|path-param|CBE enterprise number uniquely identifying the employer.
 
@@ -418,7 +418,7 @@ a|
 ----
 204 No Content
 
-or​​​
+or
 
 200 OK
 {
@@ -427,11 +427,11 @@ or​​​
 ----
 
 3+|Response codes
-​​|<<http-204,204>>
+|<<http-204,204>>
 |No Content
 |Default success code if the delete succeeded
 
-​​|<<http-200,200>>
+|<<http-200,200>>
 |OK
 |Success code with additional message
 
@@ -442,7 +442,7 @@ or​​​
 |<<http-404,404>>
 |Not Found
 |The resource does not exist and thus cannot be updated.
-​
+
 |===
 ====
 
@@ -466,7 +466,7 @@ When GETting the task resource, the response can be:
 ====
 
 Variations on the above may be required, e.g. if the task has no output, the response on success may be `200 OK` without a `Location` header.
-The schema link:schemas/common/v1/common-v1.yaml[common-v1.yaml] defines the representation of a task's status.
+The schema https://github.com/belgif/openapi-common/blob/master/src/main/swagger-2.0/common/v1/common-v1.yaml[common-v1.yaml] defines the representation of a task's status.
 
 .Long running task
 ====
