@@ -1,11 +1,0 @@
-swagger: "2.0"
-info:
-  title: data types for NSSO employer identifiers
-  version: v1beta
-paths: {}
-definitions:
-  EmployerId:
-    description: Definitive or provisional NSSO number, assigned to each registered employer or local or provincial administration.
-    type: string
-    pattern: '^5?\d{9}$' # first digit 5 indicates a provisional NSSO number
-    example: '000100006'
