@@ -1,24 +1,0 @@
-swagger: "2.0"
-info:
-  title: types related to location
-  version: v1beta
-  #=> to debate: do we define CountryIso3166Alpha2Code?  or NationalityIsoCode?
-paths: {}
-definitions:
-  CountryIsoCode:
-    description: Country represented by an ISO 3166-1 alpha-2 code
-    #TODO: add another type including ISO 3166-3 codes as well for former countries, and one combining both?
-    type: string
-    pattern: "^[A-Z]{2}$"
-  # TODO: other location types ~ BEST format and NR format
-  MunicipalityCode:
-    description: Numeric code to identify a Belgian municipality  
-    #municipality codes are the same in BeSt address and NIS code list
-    type: integer
-    minimum: 10000 
-    maximum: 99999
-  StreetNrCode:
-    description: Street code assigned by National Registry
-    type: integer
-    minimum: 1
-    pattern: 9999
