@@ -1,14 +1,0 @@
-swagger: "2.0"
-info:
-  title: data types related to a person
-  version: v1
-paths: {}
-definitions:
-  Gender:
-    description: "Gender of a person, following the ISO 5218 standard: 0 = Unknown, 1 = male, 2 = female"
-    type: integer
-    enum:
-    - 0
-    - 1
-    - 2
-  # code 9 in ISO 5218 signifies "not applicable" (e.g. when the gender property is applied to a genderless object) but is omitted here as it is not expected to be used in most use cases
