@@ -1,12 +1,0 @@
-swagger: "2.0"
-info:
-  title: data types related to time
-  version: v1beta
-paths: {}
-definitions:
-  Year:
-    description: A year in the Gregorian Calendar
-    type: integer
-    minimum: 1
-    maximum: 9999
-    example: 2020
